<resources>
    <string name="app_name">По Пути</string>
    <string name="input_number_phone">Введите номер телефона</string>
    <string name="confirm_code">Мы отправим на него код подтверждения</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="next">Далее</string>
    <string name="eula">https://poputi.bonch.dev/eula</string>
    <string name="terms_cooperation">Нажимая «Далее», я соглашаюсь с
        <a href="https://poputi.bonch.dev/eula">Пользовательским соглашением</a>, а также с обработкой моей персональной информации на условиях <a href="https://poputi.bonch.dev/policy">Политики конфиденциальности</a>
    </string>
    <string name="input_code">Введите код из СМС</string>
    <string name="retry_code_send">Отправить еще раз</string>
    <string name="who_are_you">Как вас зовут?</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_family">Ваша фамилия</string>
    <string name="your_name_display_for_driver">Ваше имя будет видно водителю</string>
    <string name="regular_driving">Регулярные поездки</string>
    <string name="get_driver">Вызвать машину</string>
    <string name="profile">Личный кабинет</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="map">Карта</string>
    <string name="comment">Комментарий</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="offer_price">Предложите цену</string>
    <string name="offerPrice">Предложить цену</string>
    <string name="offer_price_text">Чтобы заинтересовать водителей, устанавливайте справедливую цену</string>
    <string name="offer_price_average_price">Средняя цена по данному маршруту составляет</string>
    <string name="getDriver">Вызвать машину</string>
    <string name="add_payment">Добавить карту</string>
    <string name="addCard">Добавить карту</string>
    <string name="addBankCard">Добавление карты</string>
    <string name="cvc_cvv">CVC/CVV</string>
    <string name="valid_until">Действует до</string>
    <string name="numberBankCard">Номер карты</string>
    <string name="ready">Готово</string>
    <string name="commentForDriver">Комментарий для водителя</string>
    <string name="errorCode">Неверный код</string>
    <string name="showPhone">Мы отправили его на номер</string>
    <string name="retrySms">Повторить СМС</string>
    <string name="retrySmsIn">Повторить СМС через</string>
    <string name="cancelRide">Отменить поездку</string>
    <string name="reasonCancel">Причина отмены</string>
    <string name="accept">Принять</string>
    <string name="offerYourPrice">Предлагаем вашу цену водителям, ожидайте</string>
    <string name="driverInWay">Водитель уже в пути</string>
    <string name="toPassenger">В пути к пассжиру</string>
    <string name="driverArrived">Водитель приехал</string>
    <string name="inWay">Вы в пути</string>
    <string name="cancelRideQuestion">Отменить поездку?</string>
    <string name="notCancel">Не отменять</string>
    <string name="cancel">Отменить</string>
    <string name="YesCancel">Да, отменить</string>
    <string name="tooLowPrice">Вы установили слишком \nнизкую цену</string>
    <string name="recommendRisePrice">Рекомендуем повысить цену, чтобы\n заинтересовать водителей</string>
    <string name="reasonCancel1">Водитель попросил отменить</string>
    <string name="passenger_go_out">Пассажир не вышел</string>
    <string name="passenger_error">Некорректное поведение пассажира</string>
    <string name="force_majeure">Форс-мажор</string>
    <string name="change_mind">Передумал</string>
    <string name="passanger_with_child">Пассажир не указал, что он будет с ребенком</string>
    <string name="otherReason">Другая причина</string>
    <string name="wait_long">Слишком долго ждать</string>
    <string name="mistake_order">Заказал по ошибке</string>
    <string name="driver_say_to_cancel">Водитель попросил отменить</string>
    <string name="messageWarningDriverIs">Водитель уже нашелся! Вы уверены, что хотите отменить поездку?</string>
    <string name="messageWarningTakeMoney">Водитель уже подъехал! В случае отмены мы вынуждены снять с вас </string>
    <string name="messageWarningTakeMoneyInWay">Вы уже в пути! В случае отмены мы вынуждены снять с вас </string>
    <string name="timeExpired">Время ожидания истекло</string>
    <string name="ok">Понятно</string>
    <string name="becomeDriver">Стать водителем</string>
    <string name="becomePassanger">Стать пассажиром</string>
    <string name="confirmUserDoc">Подтверждение личности</string>
    <string name="forMoreTrustDrivers">Для большего доверия водителей</string>
    <string name="addBankCardProfile">Привязать карту</string>
    <string name="storyOrders">История заказов</string>
    <string name="setRatingApp">Оцените приложение</string>
    <string name="changeLang">Сменить язык</string>
    <string name="selectLang">Выбор языка</string>
    <string name="support">Техподдержка</string>
    <string name="contactWithSupport">Написать в техподдержку</string>
    <string name="support1">Служба поддержки</string>
    <string name="conditionUse">Условия пользования</string>
    <string name="logout">Выйти из профиля</string>
    <string name="email">Почта (необязательно)</string>
    <string name="fullName">Имя и фамилия</string>
    <string name="startDriverSignup">Начать регистрацию</string>
    <string name="prepareDocs">Подготовьте документы</string>
    <string name="listDocs">Для регистрации вам понадобится список следующих документов:</string>
    <string name="makePhoto">Сделать фото</string>
    <string name="completeSignup">Завершить регистрацию</string>
    <string name="carName">Марка</string>
    <string name="carModel">Модель</string>
    <string name="car_number">Государственный номер</string>
    <string name="weCheckDocs">Мы проверим документы  \nв течение 3 часов</string>
    <string name="someDocsNotValid">Некоторые документы не прошли верификацию из-за плохого качества фото</string>
    <string name="carInfo">Марка и модель автомобиля</string>
    <string name="passport">разворот паспорта с фотографией</string>
    <string name="passportAddress">паспорт с пропиской</string>
    <string name="selfWithPassport">селфи с паспортом</string>
    <string name="driverDoc">лицевая сторона ВУ</string>
    <string name="backDriverDoc">обратная сторона ВУ</string>
    <string name="frontSTS">лицевая сторона СТС</string>
    <string name="backSTS">обратная сторона СТС</string>
    <string name="shootDoc">Пожалуйста, загрузите фотографию документа</string>
    <string name="reshootDoc">Пожалуйста, загрузите новую фотографию документа</string>
    <string name="reshoot">Переснять</string>
    <string name="continue_signup">Продолжить</string>
    <string name="reshoot_photo">ПЕРЕСНЯТЬ</string>
    <string name="send_photo">ОТПРАВИТЬ</string>
    <string name="backToCabinet">Вернуться в личный кабинет</string>
    <string name="createRegularRide">Создать регулярную поездку</string>
    <string name="backCaps">НАЗАД</string>
    <string name="profileEmailText">Квитанции о поездках будут отправляться \nвам на почту</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="loadPhoto">Загрузить фотографию</string>
    <string name="notifications">Уведомления</string>
    <string name="calls">Звонки</string>
    <string name="profileDetail">Профиль</string>
    <string name="dataSaved">Данные сохранены!</string>
    <string name="fillCorrectData">Пожалуйста, заполните необходимые поля (имя, фамилия)</string>
    <string name="rating">Рейтинг</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="rub">руб.</string>
    <string name="rubles">рублей</string>
    <string name="sec">сек</string>
    <string name="seconds">секунд</string>
    <string name="seconds1">секунды</string>
    <string name="second">секунду</string>
    <string name="min">мин</string>
    <string name="metr">м</string>
    <string name="km">км</string>
    <string name="waitFor">Ожидайте еще</string>
    <string name="call">Позвонить</string>
    <string name="message">Написать</string>
    <string name="letsGo">Поехали!</string>
    <string name="rideCancel">Поездка отменена</string>
    <string name="driverCancelledRide">Водитель отменил поездку</string>
    <string name="listOrders">Список заказов</string>
    <string name="agreeWithPrice">Согласиться с ценой</string>
    <string name="offerOtherPrice">Предложить свою цену</string>
    <string name="isPlace">На месте</string>
    <string name="waitPassanger">Ожидаем пассажира</string>
    <string name="waitingTime">Время простоя</string>
    <string name="navigator">Навигатор</string>
    <string name="rideEnd">Поездка завершена</string>
    <string name="toEndRide">Завершить поездку</string>
    <string name="ratePassanger">Оцените пассажира</string>
    <string name="perfect">Отлично</string>
    <string name="whatHappens">Что случилось?</string>
    <string name="send">Отправить</string>
    <string name="yourComment">Ваш комментарий (необязательно)</string>
    <string name="passangerCancelledRide">Пассажир отменил поездку</string>
    <string name="callSupport">Обратитесь в техническую поддержку</string>
    <string name="errorSystem">Произошла ошибка системы</string>
    <string name="photoLoading">Фото загружаются…</string>
    <string name="photoProfileLoading">Фото загружается…</string>
    <string name="place">Место</string>
    <string name="atlantic">Атлантический океан</string>
    <string name="chatEmpty">Сообщений нет</string>
    <string name="checkInternet">Проверьте Интернет-соединение</string>
    <string name="bankCardValidData">Введите актуальные данные!</string>
    <string name="writeYourProblem">Опишите проблему</string>
    <string name="writeYourProblemComment">Напишите причину</string>
    <string name="youGetPlace">Вы приехали</string>
    <string name="rateRide">Как вам поездка?</string>
    <string name="thanksForRate">Спасибо за отзыв!</string>
    <string name="good">Хорошо</string>
    <string name="help">Помощь</string>
    <string name="AboutCar">Данные об автомобиле</string>
    <string name="yourPhoto">Ваше фото</string>
    <string name="yourPhotoTitle">Ваше фото будет видно пассажирам</string>
    <string name="photoPassport">Фото паспорта</string>
    <string name="photoPassportTitle">Убедитесь, что четко видно фото, номер паспорта, фио и другие данные</string>
    <string name="photoPassportDescription">Разворот паспорта с фотографией</string>
    <string name="selfPassport">Селфи с паспортом</string>
    <string name="selfPassportTitle">Убедитесь, что четко видно фото, номер паспорта, фио и другие данные</string>
    <string name="passportWithAddress">Паспорт с пропиской</string>
    <string name="passportWithAddressTitle">Убедитесь, что четко видно номер и серию паспорта и информацию о прописке</string>
    <string name="driverDocFront">Водительское удостоверение</string>
    <string name="driverDocFrontTitle">Убедитесь, что четко видно фото, ФИО, дату выдачи и действия документа</string>
    <string name="driverDocFrontDesciption">Лицевая сторона водительского удостоверения</string>
    <string name="driverDocBack">Обратная сторона ВУ</string>
    <string name="driverDocBackTitle">Убедитесь, что четко видно номер водительского удастоверения и категорию прав</string>
    <string name="driverDocBackDescription">Обратная сторона водительского удостоверения</string>
    <string name="stsDoc">Свидетельство о регистраци транспортного средства</string>
    <string name="stsDocFrontTitle">Убедитесь, что четко видно VIN, номер документа и другие данные</string>
    <string name="stsDocFrontDescription">Лицевая сторона СТС</string>
    <string name="stsDocBackTitle">Убедитесь, что четко видно номер документа и другие данные</string>
    <string name="stsDocBackDescription">Обратная сторона СТС</string>
</resources>