<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/mini_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Глеб Глазков"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/ic_star"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto"
                android:text="4.6"
                android:textColor="#50000000"
                android:textSize="16sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/img_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ava" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#30000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/confirm_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/confirmUserDoc"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/forMoreTrustDrivers"
                    android:textColor="#60000000"/>

            </LinearLayout>

            <TextView
                android:id="@+id/add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/addBankCardProfile"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/story_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/storyOrders"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/notifications"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/set_rating_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/setRatingApp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/change_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/changeLang"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/support"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/condition_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/conditionUse"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/checkout_driver"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_transparent_blue"
            android:fontFamily="@font/roboto"
            android:text="@string/becomeDriver"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>