<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/carInfo"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/carName"
        app:hintTextColor="#000000">

        <EditText
            android:id="@+id/car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et_selector"
            android:cursorVisible="true"
            android:hint="@string/carName"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#60000000"
            android:textCursorDrawable="@drawable/bg_color_cursor"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/carModel"
        app:hintTextColor="#000000">

        <EditText
            android:id="@+id/car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et_selector"
            android:cursorVisible="true"
            android:hint="@string/carModel"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#60000000"
            android:textCursorDrawable="@drawable/bg_color_cursor"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/car_number"
        app:hintTextColor="#000000">

        <EditText
            android:id="@+id/car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et_selector"
            android:cursorVisible="true"
            android:hint="@string/car_number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#60000000"
            android:textCursorDrawable="@drawable/bg_color_cursor"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/complete_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_gray"
            android:fontFamily="@font/roboto"
            android:text="@string/completeSignup"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>