<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_btn"
        android:elevation="12dp"
        android:padding="13dp"
        android:src="@drawable/ic_back_arrow" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="0.05"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/who_are_you"
            android:textColor="@android:color/black"
            android:textFontWeight="600"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/your_name_display_for_driver"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="8">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                app:hintTextColor="#000000">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_et_selector"
                    android:cursorVisible="true"
                    android:hint="@string/your_name"
                    android:nextFocusDown="@+id/last_name"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="#60000000"
                    android:textCursorDrawable="@drawable/bg_color_cursor"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/your_family"
                app:hintTextColor="#000000">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_et_selector"
                    android:cursorVisible="true"
                    android:hint="@string/your_family"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="#60000000"
                    android:textCursorDrawable="@drawable/bg_color_cursor"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.95"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_btn_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_btn_gray"
            android:fontFamily="@font/roboto"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>