<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_corners_layout"
        android:elevation="30dp"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:visibility="gone"
                android:id="@+id/price_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto"
                android:text="320"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/rideEnd"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/subtitle_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:alpha="0.4"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/ratePassanger"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/status_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:alpha="0.9"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/perfect"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_comment"
            android:gravity="start"
            android:hint="@string/yourComment"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:textColorHint="#60000000"
            android:textCursorDrawable="@drawable/bg_color_cursor"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/reject_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/bg_cross_btn"
                android:elevation="12dp"
                android:padding="16dp"
                android:src="@drawable/ic_big_cross"
                android:translationZ="10dp" />

            <Button
                android:id="@+id/accept_driver"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_btn_blue"
                android:fontFamily="@font/roboto"
                android:shadowColor="@color/colorBlue"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>